--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,10 @@ h1 {
 	border: 2px dashed #1B1B1B;
 	color: #1B1B1B;
 	font-weight: 700;
-	width: 150px;
-  	height: 150px;
+	height: 150px;
   	padding: 20px;
+  	margin: 10px;
+  	width: 150px;
 }
 
 .inline {
